# airduct

./: .gitignore  README.md  airduct.yml  mkdocs.yml  pyproject.toml  run.py  souffle.yml
airduct/: __init__.py  config.py  core.py  database.py  flowfinder.py
airduct/api/: api.py
airduct/cli/: run.py
airduct/gui/: gui.py
airduct/gui/templates/: home.html  layout.html
docs/: index.md  index.rst
example_jobs/: example.py  example_2.py
example_jobs/nested/: example.py
souffle/: __init__.py  config.py  core.py  database.py  flowfinder.py  logger.py  scheduling.py  tasks.py
webapp/: package.json
webapp/public/: index.html
webapp/src/: ActiveFlows.js  App.css  App.js  Dashboard.js  Flows.js  Schedules.js  Tasks.js
