[tool.poetry]
name = "airduct"
version = "0.1.0"
description = ""
authors = ["Skyler Lewis <skyler.lewis@canopytax.com>"]
repository = "https://github.com/alairock/airduct.git"
homepage = "https://github.com/alairock/airduct"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
crontab = "^0.22.6"
sqlalchemy = "^1.3"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
