[tool.poetry]
name = "airduct"
version = "0.1.7"
description = "Simple Pipeline Scheduler in Python"
authors = ["Skyler Lewis <skyler.lewis@canopytax.com>"]
repository = "https://github.com/alairock/airduct.git"
homepage = "https://github.com/alairock/airduct"
readme = "README.md"

[tool.poetry.scripts]
airduct = "airduct.cli.run:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
crontab = "^0.22.6"
sqlalchemy = "^1.3"
pyyaml = "^5.1"
psycopg2 = "^2.8"
flask = "^1.1"
flask_cors = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
